--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,29 +5,24 @@ description = "syma X22W protocol hacking"
 authors = [
     { name = "Maciej Urbanski", email = "rooter@kyberian.net" }
 ]
-dependencies = []
-readme = "README.md"
-requires-python = ">= 3.8"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.rye]
-managed = true
-dev-dependencies = [
+dependencies = [
     "fire>=0.6.0",
     "asyncio-dgram>=2.2.0",
     "scapy>=2.5.0",
-    "ipython>=8.26.0",
     "pyx>=0.16",
     "matplotlib>=3.9.2",
+]
+readme = "README.md"
+requires-python = ">= 3.12"
+
+[dependency-groups]
+dev = [
+    "ipython>=8.26.0",
     "pytest>=8.3.2",
-    "isort>=5.13.2",
+    "ruff>=0.8.0",
 ]
 
-[tool.hatch.metadata]
-allow-direct-references = true
+[build-system]
+requires = ["uv"]
+build-backend = "uv"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/syma"]
